k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-k8s

spec:
  selector:
    matchLabels:
      app: spring-boot-k8s

  replicas: 2
  template:
    metadata:
      labels:
        app: spring-boot-k8s
    spec:
      containers:
        - name: spring-boot-k8s
          image: m0ngi/mini-projet-springboot:23
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
