k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-k8s-svc
  namespace: default
spec:
  selector:
    app: spring-boot-k8s
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
