k8s-spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: mp.k8s.securinets.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-k8s-svc
                port:
                  number: 8080
